<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">데이즈</string>
    <string name="app_name_en">Days</string>
    <string name="app_catchpraise">마인드스프리-Days</string>

    <!-- DATA Base-->
    <string name="db_name">PicnpicsDB.db</string>

    <!-- api key -->
    <string name="daummap_key">53c04e480e98b86246fa88e8021bf235 </string>
    <string name="kakao_app_key">1ee688cb4a47395a00b1106b425cea17</string>
    <string name="kakao_scheme">kakao1ee688cb4a47395a00b1106b425cea17</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="app_host">minspree</string>
    <string name="app_shcheme">days</string>
    <string name="openweather_key">939fe82acaa6b08d228a31a7f052eec6</string>
    <string name="foursquare_key">RXCWDME35BAKSOHTCXYSXEZBCCESCCMO5K3TN3TUAI1F2XML</string>
    <string name="facebook_app_id">212478769212695</string>

    <!-- firebase bucket & key-->
    <string name="firebase_bucket_name">"gs://days-bdb6b.appspot.com"</string>
    <string name="firebase_database_name">"https://days-bdb6b.firebaseio.com/"</string>

    <!-- text for ui -->
    <string name="hello_world">Hello world!</string>
    <string name="hello_world_quote">"\"Hello world!\""</string>
    <string name="text_select_location">이 위치로 변경</string>
    <string name="text_login">로그인</string>
    <string name="text_logout">로그아웃</string>
    <string name="text_signup">회원가입</string>
    <string name="text_lock">패스워드설정</string>
    <string name="text_notification">푸시설정</string>
    <string name="text_trace">트레이스 설정</string>
    <string name="text_data">데이터 백업 및 복원</string>
    <string name="text_mode">모드설정</string>
    <string name="text_connect">컨넥팅</string>
    <string name="text_tutorial">사용안내</string>
    <string name="text_faq">자주묻는질문</string>
    <string name="text_terms">이용약관</string>
    <string name="text_policy">개인정보취급방침</string>
    <string name="text_findpassword">비밀번호찾기</string>
    <string name="text_view">보기</string>
    <string name="text_share">공유</string>
    <string name="text_save">저장</string>
    <string name="text_confirm">확인</string>
    <string name="text_setting">설정</string>
    <string name="text_install">설치</string>
    <string name="text_cancel">취소</string>
    <string name="text_email">이메일</string>
    <string name="text_search">이메일</string>
    <string name="text_edit">수정</string>
    <string name="text_next">Skip</string>
    <string name="text_prev">이전</string>
    <string name="text_facebook">페이스북</string>
    <string name="text_kakao">카카오톡</string>
    <string name="text_etc">기타</string>

    <string name="text_weather_clear">맑음</string>
    <string name="text_weather_clouds">흐림</string>
    <string name="text_weather_dust">약간흐림</string>
    <string name="text_weather_haze">구름많음</string>
    <string name="text_weather_mist">구름조금</string>
    <string name="text_weather_fog">안개</string>
    <string name="text_weather_rain">비</string>

    <string name="text_emoji_happy">Happy</string>
    <string name="text_emoji_angry">Angry</string>
    <string name="text_emoji_sad">Sad</string>
    <string name="text_emoji_busy">Busy</string>
    <string name="text_emoji_default">Default</string>

    <string name="text_location_home">home</string>
    <string name="text_location_other">school/work</string>

    <string name="text_find_password">비밀번호찾기</string>
    <string name="text_terms_agreement">이용약관에 동의합니다.</string>
    <string name="text_privacy_agreement">개인정보취급방침에 동의합니다.</string>

    <string name="text_progress_preparedata">데이터 확인중. 전송하는 데이터의 양에 따라 최대 10분이상 소요됩니다.</string>
    <string name="text_progress_imageprocessing">대표사진을 선택하는 중입니다.</string>

    <!-- hint for ui -->
    <string name="hint_noname">이름없음</string>
    <string name="hint_search_text">검색어를 입력해주세요.</string>
    <string name="hint_login_email">이메일을 입력해주세요.</string>
    <string name="hint_login_password">비밀번호를 입력해주세요.</string>
    <string name="hint_login_password_pin">PIN을 입력해주세요.</string>
    <string name="hint_pin_pattern">숫자 네자리를 입력해주세요.</string>
    <string name="hint_login_password_retype">비밀번호를 한번 더 입력해주세요.</string>
    <string name="hint_profile_name">이름을 입력해주세요.</string>
    <string name="hint_profile_birthday">생년월일을 입력해주세요.</string>
    <string name="hint_profile_gender">성별을 입력해주세요.</string>
    <string name="hint_profile_address1">집주소를 입력해주세요.</string>
    <string name="hint_profile_address2">"학교/직장 주소를 입력해주세요."</string>
    <string name="hint_trace_distance">이동하는 거리를 미터(m)로 설정해주세요.</string>
    <string name="hint_trace_duration">머무르는 시간을 분으로 설정해주세요.</string>
    <string name="hint_edit_content">수정할 내용을 작성해주세요.</string>

    <!-- title texts for actionbar-->
    <string name="title_main">데이즈</string>
    <string name="title_imagepick">이미지 선택</string>
    <string name="title_profile">프로필</string>
    <string name="title_traceconfig">트레이스설정</string>
    <string name="title_findpassword">비밀번호찾기</string>
    <string name="title_login">로그인</string>
    <string name="title_signup">회원가입</string>
    <string name="title_datepick">날짜 선택</string>


    <!-- Loadind Message -->
    <string name="loading_images">이미지를 로딩중입니다.</string>

    <!-- Messages for Dialog and Toast -->
    <string name="message_search_entertext">결과가 없습니다.</string>
    <string name="message_network_error">네트워크접속 에러입니다. 다시 시도해주세요.</string>
    <string name="message_backup_error">데이터 백업 중 에러가 발생했습니다. 다시 시도해주세요.</string>
    <string name="message_restore_error">데이터 복원 중 에러가 발생했습니다. 다시 시도해주세요.</string>

    <string name="message_app_finish">뒤로가기 버튼을 한번 더 누르면 앱이 종료됩니다.</string>
    <string name="message_data_backup_restore">진행할 작업을 선택하세요.</string>
    <string name="message_ask_emotion">오늘의 기분을 표현해주세요</string>
    <string name="message_input_email">이메일을 입력해주세요.</string>
    <string name="message_input_password">비밀번호를 입력해주세요.</string>
    <string name="message_input_repassword">비밀번호확인을 입력해주세요.</string>
    <string name="message_reset_password">비밀번호가 재설정되었습니다. 이메일을 확인해주세요.</string>
    <string name="message_invalid_email">이메일 형식으로 입력해주세요.</string>
    <string name="message_invalid_repassword">비밀번호가 일치하지 않습니다.</string>
    <string name="message_invalid_terms">이용약관에 동의해주세요.</string>
    <string name="message_invalid_privacy">개인정보 취급방침에 동의해주세요.</string>
    <string name="message_invalid_distance">거리는 숫자로만 입력가능합니다.</string>
    <string name="message_invalid_duration">체류시간은 숫자로만 입력가능합니다.</string>
    <string name="message_invalid_picking">이미지는 세장까지 선택가능합니다.</string>
    <string name="message_googleplayservice_title">구글플레이서비스 설치안내</string>
    <string name="message_googleplayservice">데이즈를 이용하시려면 구글플레이서비스를 설치하셔야 합니다.</string>
    <string name="message_locationservice_title">위치 서비스 사용설정</string>
    <string name="message_locationservice">데이즈에서 위치 정보를 사용하려면 위치 서비스 권한을 허용해주세요.</string>
    <string name="message_findpassword">이메일로 비밀번호를 변경할수 있는 링크를 전달드립니다</string>
    <string name="message_memory_warning">사용가능한 메모리가 10%이하입니다.</string>
    <string name="message_journal_created">오늘의 다이어리가 작성되었습니다.</string>
    <string name="message_image_uploading">사진을 업로드 중 입니다.</string>
    <string name="message_data_uploading">데이터를 업로드 중 입니다.</string>
    <string name="message_searchtext_enter">검색어를 입력해주세요.</string>
    <string name="message_complete_download">다운로드가 완료되었습니다.</string>
    <string name="message_select_period">기간을 선택해주세요.</string>
    <string name="message_select_invaliddate">다이어리가 작성되지 않은 날짜입니다.</string>

    <string name="message_tutotial_text_01">"오늘을 누르면 데이즈가 기록한 하루의 일과를 확인할 수 있습니다.\n1.해당 장소에서 찍은 사진 중 베스트 사진 3장을 추천해서 보여주며 맘에 안 들 경우 클릭하며 변경하실 수 있습니다.\n2.장소가 잘못 보이는 경우 지도를 눌러 변경 가능"</string>
    <string name="message_tutotial_text_02">캘린더에서 원하는 날짜를 누르면 그날 무엇을 했는지 알 수 있습니다.</string>
    <string name="message_tutotial_text_03">모멘트를 누르면 오늘의 하루가 정리되어 나타납니다.</string>
    <string name="message_tutotial_text_04">설정에서 자신에게 맞는 기능을 지정하고 정보를 변경하세요.</string>

    <string name="message_error_weak_password">비밀번호는 숫자,영문,특수문자 조합으로 설정해주세요.</string>
    <string name="message_error_invalid_email">올바르지 않은 이메일입니다</string>
    <string name="message_error_user_exists">존재하지 않는 사용자 입니다.</string>
    <string name="message_error_user_exist">이미 가입한 계정입니다.</string>
    <string name="message_fail_login">로그인에 실패했습니다. 이메일과 비밀번호를 확인해주세요.</string>
    <string name="message_install_googleplayservice">구글플레이서비스를 설치해주세요.</string>
    <string name="message_complete_save">저장이 완료되었습니다.</string>
    <string name="message_daummap_request_limit">"API_KEY의 제한 트래픽이 초과되었습니다."</string>


    <!-- Format fot Text -->
    <string name="format_summarize_date" formatted="false">"오늘은 %d군데의 장소에서 찍은 %d개의 사진있습니다."</string>
    <string name="format_summarize" formatted="false">"%d군데의 장소에서 찍은 %d개의 사진있습니다."</string>
    <string name="format_summarize_date_withweather" formatted="false">"오늘 날씨는 %s 입니다.\n%d군데의 장소에서 찍은 %d개의 사진있습니다."</string>

    <!-- Main Tab Text -->
    <string name="main_tab_today">오늘</string>
    <string name="main_tab_summarize">캘린더</string>
    <string name="main_tab_journal">모멘트</string>
    <string name="main_tab_setting">설정</string>

    <!-- Dummy Text for Development -->
    <string name="text_dummy">Empty</string>
</resources>
