<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/bg_round_white">
        <TextView
            style="@style/font_black_12sp"
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/text_share"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="29dp"
            android:orientation="horizontal"
            android:paddingLeft="27dp"
            android:paddingRight="27dp">


            <TextView
                style="@style/font_black_12sp"
                android:id="@+id/btn_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_facebook"
                android:drawableTop="@mipmap/ic_share_facebook"
                android:drawablePadding="12dp"/>

            <TextView
                style="@style/font_black_12sp"
                android:id="@+id/btn_kakao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/text_kakao"
                android:drawableTop="@mipmap/ic_share_kakao"
                android:drawablePadding="12dp"/>

            <TextView
                style="@style/font_black_12sp"
                android:id="@+id/btn_etc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_etc"
                android:drawableTop="@mipmap/ic_more_white"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="12dp"/>

        </LinearLayout>

        <Button
            style="@style/font_white_12sp"
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_middle"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_cancel"
            android:gravity="center"
            android:background="@drawable/bg_round_primary"/>
    </LinearLayout>
</LinearLayout>