<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <TextView
                style="@style/font_white_16sp"
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/title_signup"
                 />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/font_black_14sp"
                        android:theme="@style/AppTheme.TextInputEditText"
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_middle"
                        android:hint="@string/hint_login_email"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/font_black_14sp"
                        android:theme="@style/AppTheme.TextInputEditText"
                        android:id="@+id/edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_middle"
                        android:layout_marginTop="@dimen/middle"
                        android:hint="@string/hint_login_password"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:imeOptions="actionNext" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/font_black_14sp"
                        android:theme="@style/AppTheme.TextInputEditText"
                        android:id="@+id/edit_repassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_middle"
                        android:layout_marginTop="@dimen/middle"
                        android:hint="@string/hint_login_password_retype"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:imeOptions="actionSend" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="51dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_small"
                    android:orientation="horizontal">
                    <CheckBox
                        style="@style/font_greydark_12sp"
                        android:id="@+id/check_term"
                        android:buttonTint="@color/dark_grey"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:text="@string/text_terms_agreement"/>

                    <TextView
                        style="@style/font_greydark_12sp"
                        android:id="@+id/text_terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/text_view" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_small"
                    android:orientation="horizontal">
                    <CheckBox
                        style="@style/font_greydark_12sp"
                        android:id="@+id/check_privacy"
                        android:buttonTint="@color/dark_grey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/text_privacy_agreement"/>

                    <TextView
                        style="@style/font_greydark_12sp"
                        android:id="@+id/text_privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/text_view" />
                </LinearLayout>

            </LinearLayout>

            <Button
                style="@style/font_white_16sp"
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_middle"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/text_signup"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@color/colorPrimary" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>