<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/bg_round_white">
        <TextView
            style="@style/font_black_12sp"
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/text_edit"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:orientation="horizontal"
            android:paddingLeft="27dp"
            android:paddingRight="27dp">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/font_black_14sp"
                    android:theme="@style/AppTheme.TextInputEditText"
                    android:id="@+id/edit_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_edit_content"
                    android:maxLines="6"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionNone"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                style="@style/font_white_12sp"
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_middle"
                android:layout_weight="1"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="7dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_confirm"
                android:gravity="center"
                android:background="@drawable/bg_round_primary"/>

            <Button
                style="@style/font_white_12sp"
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_middle"
                android:layout_weight="1"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="28dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_cancel"
                android:gravity="center"
                android:background="@drawable/bg_round_accent"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>